improved logging output